2006-11-17  Yves Combe  <yves@ycombe.net>

	From Jose Jorge (melody.py author)  suggestion. Melody: reset policy at bonus call to make last	sound play.

	* src/boards/python/melody.py:

2006-11-16  Yves Combe  <yves@ycombe.net>

	Patch by Miguel DE IZARRA, added a fake (2clicks) dnd in GCompris.

	Modifications to shapegame:
	- suppress edit mode
	- 2 types of dnd.
	- fix placement bug when piece is re-moved.
	- dsplay icone even if it's not in current page.

	* src/boards/shapegame.c: (start_board), (end_board), (key_press),
	(shapegame_next_level), (process_ok), (shapegame_init_canvas),
	(add_shape_to_list_of_shapes), (dump_shapes), (dump_shape),
	(shape_goes_back_to_list), (item_to_shape),
	(target_point_switch_on), (item_event_drag), (item_event),
	(update_shapelist_item), (setup_item), (add_shape_to_canvas),
	(create_shape), (add_xml_shape_to_data), (parse_doc),
	(read_xml_file):
	* src/gcompris/Makefile.am:
	* src/gcompris/drag.c: (gc_drag_item_get), (gc_drag_item_set),
	(gc_drag_item_move), (gc_drag_offset_get), (gc_drag_offset_set),
	(gc_drag_offset_save), (gc_drag_event), (gc_drag_event_root),
	(gc_drag_start), (gc_drag_stop):
	* src/gcompris/drag.h:
	* src/gcompris/gameutil.c:

2006-11-15  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/wordprocessor.c: (display_style_selector),
	(display_color_style_selector), (item_event_style_selection),
	(item_event_color_style_selection): Fixed untranslated combo

2006-11-13  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/properties.c: (gc_prop_config_file_get),
	(gc_prop_new): changed to no more use open. open is not portable
	and it fails to open file with utf8 characters on windows.

2006-11-12  Bruno coudoin  <bruno.coudoin@free.fr>

	- By Miguel DE IZARRA, added a 2 player mode in connect4.

	* boards/Makefile.am:
	* boards/connect4-2players.xml.in:
	* boards/connect4.xml.in:
	* po/POTFILES.in:
	* src/boards/python/connect4.py:

2006-11-12  Bruno coudoin  <bruno.coudoin@free.fr>
