@@ -55,7 +55,6 @@ urpmi texi2html
 urpmi tetex
 urpmi gnuchess
 urpmi gnucap
-urpmi libSDL_mixer1.2-devel
 urpmi libtool
 urpmi libsqlite3_0 libsqlite3_0-devel
 urpmi python-sqlite2
