@@ -1,3 +1,10 @@
+2006-11-18  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* INSTALL:
+	* po/Makefile.in.in:
+	* src/boards/python/electric.py: Fixed electricity to work with gnucap-20060830-1mdv2007.0
+	  It should work with other gnucap release as well but untested.
+
 2006-11-17  Yves Combe  <yves@ycombe.net>
 
 	From Jose Jorge (melody.py author)  suggestion. Melody: reset policy at bonus call to make last	sound play.
